# Low-Latency_Trading_Gateway

./: CONTRIBUTING.md  LICENSE  LockFreeQueue_test.cpp  README.md  docker-compose.yml  symbols_debug.unql  symbols_fixed.unql  symbols_mock.unql  symbols_test.unql
benchmarks/: benchmark.cpp
cpp-core/: CMakeLists.txt
cpp-core/lockfree_queue/: lockfree_queue.cpp  lockfree_queue.h
cpp-core/matching_engine/: benchmark.py  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h  simple_client.py
cpp-core/network/: message_parser.cpp  message_parser.h  statsd_client.cpp  statsd_client.h  tcp_server.cpp  tcp_server.h
cpp-core/order_gateway/: gateway_server.cpp  gateway_server.h  main.cpp
docs/: architecture.md  decisions.md  index.html  performance.md
docs/css/: doxygen.css
docs_test2/: class_CancelOrder.html  class_GatewayServer.html  class_LockFreeQueue.html  class_MatchingEngine.html  class_MessageHeader.html  class_MessageParser.html  class_ModifyOrder.html  class_NewOrder.html  class_Node.html  class_Order.html  class_OrderAck.html  class_OrderBook.html  class_StatsDClient.html  class_TCPServer.html  class_Trade.html  class_WireNewOrder.html  class_sockaddr_in.html  index.html  namespace_trading.html
docs_test2/js/: doxygen.js
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: database.rs  handlers.rs  main.rs  metrics.rs  models.rs
scripts/: init.sql
tests/: CMakeLists.txt  CMakeListsTests.txt  test_gateway_server.cpp  test_lockfree_queue.cpp  test_main.cpp  test_matching_engine.cpp  test_message_parser.cpp  test_performance.cpp  test_tcp_server.cpp
